2008-12-19  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=22938

        When the document element is transformed, we need to paint
        the view background to avoid unpainted areas.

        Test: fast/transforms/transformed-document-element.html

        * rendering/RenderView.cpp:
        (WebCore::RenderView::paintBoxDecorations):

Canonical link: https://commits.webkit.org/31616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39413 268f45cc-cd09-0410-ab3c-d52691b4dbfc